<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTaskActivity">

    <LinearLayout
        android:id="@+id/linearLayout_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical"
        android:background="@drawable/title_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/edit_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/edit_details"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Horizontal layout for images after task details -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:src="@drawable/hbd"
                android:scaleType="centerInside" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:src="@drawable/gifts"
                android:scaleType="centerInside" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:src="@drawable/balloons"
                android:scaleType="centerInside" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:src="@drawable/flags"
                android:scaleType="centerInside" />

        </LinearLayout>
    </LinearLayout>



    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="376dp"
        android:layout_height="594dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_edit">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_editname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/whattobedone"
                android:textColor="@color/darkBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_taskname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:hint="@string/hint_add"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_editduedate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/duedate"
                android:textColor="@color/darkBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <DatePicker
                android:id="@+id/edit_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:calendarViewShown="false"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/tv_editduetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/duetime"
                android:textColor="@color/darkBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TimePicker
                android:id="@+id/edit_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:timePickerMode="spinner" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colour10"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>